--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - TZ=${TZ}
   db:
     image: mysql:5.7
+    ports:
+      - "4306:3306"
     volumes:
       - db-store:/var/lib/mysql
       - ./logs:/var/log/mysql
